--- a/styles/app.css
+++ b/styles/app.css
@@ -450,6 +450,9 @@ body {
   left: 16px;
   bottom: 16px;
 }
+.featured-info span, .featured-person-info span {
+  display: block;
+}
 .featured-namehouse {
   color: #0e1735;
   font-size: 24px;
@@ -578,6 +581,9 @@ body {
   display: flex;
   align-items: center;
   gap: 16px;
+}
+.detail-person-info span {
+  display: block;
 }
 .detail-person-image {
   width: 56px;
@@ -1019,20 +1025,33 @@ body {
   grid-template-columns: 1fr 0.5fr 0.5fr 1fr;
   gap: 88px;
 }
+.footer-blur img:first-of-type, .footer-blur img:last-of-type {
+  position: absolute;
+}
+.footer-blur img:first-of-type {
+  right: 0;
+  bottom: -25px;
+  z-index: -2;
+}
+.footer-blur img:last-of-type {
+  right: 46px;
+  bottom: -20px;
+  z-index: -1;
+}
 .footer-caption {
   max-width: 320px;
   line-height: 1.7142857143;
   opacity: 0.75;
   margin-block: 16px 24px;
 }
-.footer-socials {
+.footer-socials-list {
   display: flex;
   align-items: center;
   gap: 0 24px;
 }
-.footer-socials-button {
-  width: 41px;
-  height: 41px;
+.footer-socials-item .footer-socials-button {
+  width: 48px;
+  height: 48px;
   background-color: #fff;
   border-radius: 100rem;
   display: flex;
@@ -1043,29 +1062,33 @@ body {
   border: 3px solid #fff;
   overflow: hidden;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  cursor: pointer;
 }
-.footer-socials-button:hover .footer-socials-icon {
-  color: #fff;
-  transform: rotateY(360deg);
-}
-.footer-socials-button::before {
+.footer-socials-item .footer-socials-button::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: var(--bg-color);
+  background: var(--bg-color);
   z-index: 0;
   scale: 1 0;
   transform-origin: bottom;
   transition: scale 0.5s ease;
 }
-.footer-socials-button:first-child {
+.footer-socials-item .footer-socials-button:hover .footer-socials-icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+.footer-socials-item:hover .footer-socials-button::before {
+  scale: 1 1;
+}
+.footer-socials-item:first-child {
   --bg-color: #1877f2;
 }
-.footer-socials-button:nth-child(2) {
+.footer-socials-item:nth-child(2) {
   --bg-color: #55acee;
 }
-.footer-socials-button:last-child {
+.footer-socials-item:last-child {
   --bg-color: linear-gradient(to bottom right, #f9ce34, #ee2a7b, #6228d7);
 }
 .footer-socials-icon {
@@ -1073,6 +1096,29 @@ body {
   color: #3c4563;
   transition: 0.5s ease;
   z-index: 2;
+}
+.footer-heading {
+  color: #0e1735;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 24px;
+}
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  gap: 18px 0;
+}
+.footer-link {
+  color: #888b97;
+  line-height: normal;
+  transition: all 0.3s linear;
+}
+.footer-link:hover {
+  text-shadow: 0.5px 0 0 currentColor;
+  color: #1b1c57;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=app.css.map */
